--- a/hw02-solution.ipynb
+++ b/hw02-solution.ipynb
@@ -4,27 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python 3.5.1\n",
-    "# Homework 2\n",
-    "# OCNG 489\n",
-    "# Author: Trent W. Spencer"
+    "## Homework 2\n",
+    "## OCNG 489\n",
+    "#### Author: Trent W. Spencer\n",
+    "#### Python 3.5.1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#Question 1:\n",
-    "Trent = {'Hometown':'Amarillo','Department':'Atmospheric Sciences','Status':'Undergrad','Reasoning':'I am taking this course because I already have experience in python and would love to learn more and get additional practice with it.'}"
+    "Trent = {'Hometown':'Amarillo','Department':'Atmospheric Sciences','Status':'Undergrad','Years at TAMU':'2', 'Reasoning':'I am taking this course because I already have experience in python and would love to learn more and get additional practice with it.'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
    ],
    "source": [
     "#Question 2:\n",
-    "def vowelcheck(letter):\n",
+    "def isvowel(letter):\n",
     "    vowels = ['a','e','i','o','u','y']\n",
     "    if letter in vowels:\n",
     "        print('True')\n",
@@ -48,8 +48,8 @@
     "        print('False')\n",
     "        \n",
     "\n",
-    "vowelcheck('a')        \n",
-    "vowelcheck('b')"
+    "isvowel('a')        \n",
+    "isvowel('b')"
    ]
   },
   {
@@ -144,7 +144,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-24-2179392e6856>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-24-2179392e6856>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    return str(num) + ' bottles of beer on the wall, ' + str(num) + ' bottles of beer.\\n' +\u001b[0m\n\u001b[1;37m                                                                                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question 11\n",
+    "def words(num):\n",
+    "    \"\"\"Returns words with proper number of beer bottles filled in.\"\"\"\n",
+    "    '''Added colon, fixed indentation, changed brackets to parenthesis '''\n",
+    "    if num != 1:\n",
+    "        return str(num) + ' bottles of beer on the wall, ' + str(num) + ' bottles of beer.\\n' + \n",
+    "            'Take one down, pass it around, ' + str(num-1) + ' bottles of beer on the wall.'\n",
+    "\n",
+    "    elif num = 1:\n",
+    "        return str(num) + ' bottle of beer on the wall, ' + str(num) + ' bottle of beer.\\n' + \n",
+    "            'Take one down, pass it around, ' + str(num-1) + ' bottles of beer on the wall.'\n",
+    "\n",
+    "\n",
+    "numbottles = 3        \n",
+    "for i in range(numbottles, 0, 1):\n",
+    "    print(words(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -153,45 +188,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "Hello\n",
+      " World\n"
      ]
     }
    ],
    "source": [
-    "#Question 9\n",
-    "#Changed brackets to Parenthesis, added another =, added necessary colons, properly indented line\n",
-    "for i in range(15):\n",
-    "    if i == 5:\n",
-    "        print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Question 10\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Question 11\n",
-    "\n",
-    "\n",
-    "def bottlesonthewall():\n",
-    "    for i in range(99,0):\n",
-    "        print(i+' bottles of beer on the wall, '+i+' bottles of beer. Take one down, pass it around, '+(i-1)+' bottles of beer on the wall.')\n",
-    "        \n",
-    "bottlesonthewall()"
+    "print('Hello\\n' +' World')"
    ]
   },
   {
