Added work done Tuesday night

--- a/hw02-solution.ipynb
+++ b/hw02-solution.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -41,12 +41,12 @@
    "source": [
     "#Question 2:\n",
     "def isvowel(letter):\n",
-    "    vowels = ['a','e','i','o','u','y']\n",
+    "    vowels = ['a','e','i','o','u','y','A','E','I','O','U','Y']\n",
     "    if letter in vowels:\n",
     "        print('True')\n",
     "    else:\n",
     "        print('False')\n",
-    "        \n",
+    "\n",
     "\n",
     "isvowel('a')        \n",
     "isvowel('b')"
@@ -54,40 +54,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "#Question 3\n",
     "def length(arg):\n",
-    "    "
+    "    length = 0\n",
+    "    for term in arg:\n",
+    "        length = length + 1\n",
+    "    print(length)\n",
+    "    \n",
+    "length(['string1', 'string2'])\n",
+    "length('Hello')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'radar'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Question 4\n",
     "def reverse(string):\n",
+    "    return string[::-1]\n",
+    "reverse(\"radar\")\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This isn't a palindrome\n"
+     ]
+    }
+   ],
    "source": [
     "#Question 5\n",
-    "def is_palindrome(text):"
+    "def is_palindrome(text):\n",
+    "    '''Finds if the arguement is a palindrome, meaning it is the same forwards and backwards'''\n",
+    "    text = text.split()\n",
+    "    def reverse(string):\n",
+    "        return string[::-1]\n",
+    "    ''.join(text)\n",
+    "    rev = reverse(text)\n",
+    "    if rev == text:\n",
+    "        print(\"This is a palindrome\")\n",
+    "    else:\n",
+    "        print(\"This isn't a palindrome\")\n",
+    "is_palindrome(\"Never odd or even\")"
    ]
   },
   {
@@ -204,7 +251,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "ay = 'Hello'\n",
+    "ay."
+   ]
   }
  ],
  "metadata": {
