--- a/hw02-solution.ipynb
+++ b/hw02-solution.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
        "'radar'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This isn't a palindrome\n"
+      "False\n"
      ]
     }
    ],
@@ -125,27 +125,45 @@
     "#Question 5\n",
     "def is_palindrome(text):\n",
     "    '''Finds if the arguement is a palindrome, meaning it is the same forwards and backwards'''\n",
+    "    text = text.lower()\n",
     "    text = text.split()\n",
+    "    text = ''.join(text)\n",
+    "    \n",
     "    def reverse(string):\n",
     "        return string[::-1]\n",
-    "    ''.join(text)\n",
-    "    rev = reverse(text)\n",
+    "    \n",
+    "    rev = reverse(text.lower())\n",
+    "    \n",
     "    if rev == text:\n",
-    "        print(\"This is a palindrome\")\n",
+    "        print(\"True\")\n",
     "    else:\n",
-    "        print(\"This isn't a palindrome\")\n",
-    "is_palindrome(\"Never odd or even\")"
+    "        print(\"False\")\n",
+    "        \n",
+    "is_palindrome(\"Cheese\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#Question 6"
+    "#Question 6\n",
+    "file = open(\"../file.txt\")\n",
+    "lines = file.readlines()\n",
+    "newf = []\n",
+    "nu = 0\n",
+    "for line in lines:\n",
+    "    linechk = line.split()\n",
+    "    if not linechk: continue\n",
+    "    nu = nu + 1\n",
+    "    newf.append(str(nu) + \" \" + line)\n",
+    "with open('../test.log', 'w') as m:\n",
+    "    for u in newf:\n",
+    "        m.write(u)   \n",
+    "    "
    ]
   },
   {
@@ -161,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -170,8 +188,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter text to be encoded/decoded: \n"
+      "Enter text to be encoded/decoded: Pnrfne pvcure? V zhpu cersre Pnrfne fnynq!\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Caesar cipher? I much prefer Caesar salad!'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -184,49 +212,25 @@
     "       'y':'l', 'z':'m', 'A':'N', 'B':'O', 'C':'P', 'D':'Q', 'E':'R', 'F':'S', \n",
     "       'G':'T', 'H':'U', 'I':'V', 'J':'W', 'K':'X', 'L':'Y', 'M':'Z', 'N':'A', \n",
     "       'O':'B', 'P':'C', 'Q':'D', 'R':'E', 'S':'F', 'T':'G', 'U':'H', 'V':'I', \n",
-    "       'W':'J', 'X':'K', 'Y':'L', 'Z':'M'}\n",
-    "    \n",
+    "       'W':'J', 'X':'K', 'Y':'L', 'Z':'M', '?':'?', '!':'!', ' ':' '}\n",
+    "    letters = []\n",
+    "    new = []\n",
+    "    for part in phrase:\n",
+    "        letter = list(part)\n",
+    "        for k in letter:\n",
+    "            letters.append(k)\n",
+    "    for l in letters:\n",
+    "        newlet = key[l]\n",
+    "        new.append(newlet)\n",
+    "    newphrase = ''.join(new)\n",
+    "    return newphrase\n",
+    "\n",
     "endec()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-24-2179392e6856>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-24-2179392e6856>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    return str(num) + ' bottles of beer on the wall, ' + str(num) + ' bottles of beer.\\n' +\u001b[0m\n\u001b[1;37m                                                                                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Question 11\n",
-    "def words(num):\n",
-    "    \"\"\"Returns words with proper number of beer bottles filled in.\"\"\"\n",
-    "    '''Added colon, fixed indentation, changed brackets to parenthesis '''\n",
-    "    if num != 1:\n",
-    "        return str(num) + ' bottles of beer on the wall, ' + str(num) + ' bottles of beer.\\n' + \n",
-    "            'Take one down, pass it around, ' + str(num-1) + ' bottles of beer on the wall.'\n",
-    "\n",
-    "    elif num = 1:\n",
-    "        return str(num) + ' bottle of beer on the wall, ' + str(num) + ' bottle of beer.\\n' + \n",
-    "            'Take one down, pass it around, ' + str(num-1) + ' bottles of beer on the wall.'\n",
-    "\n",
-    "\n",
-    "numbottles = 3        \n",
-    "for i in range(numbottles, 0, 1):\n",
-    "    print(words(i))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -235,26 +239,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello\n",
-      " World\n"
+      "1 bottle of beer on the wall, 1 bottle of beer.\n",
+      "Take one down, pass it around, 0 bottles of beer on the wall.\n",
+      "\n",
+      "2 bottles of beer on the wall, 2 bottles of beer.\n",
+      "Take one down, pass it around, 1 bottles of beer on the wall.\n",
+      "\n",
+      "3 bottles of beer on the wall, 3 bottles of beer.\n",
+      "Take one down, pass it around, 2 bottles of beer on the wall.\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print('Hello\\n' +' World')"
+    "#Added colons, changed brackets to parenthesis, added another =, moved everything to one line\n",
+    "#changed numbottles to 4 so no negative bottles, rearranged order of range args,\n",
+    "\n",
+    "def words(num):\n",
+    "    \"\"\"Returns words with proper number of beer bottles filled in.\"\"\"\n",
+    "    if num != 1:\n",
+    "        return str(num) + ' bottles of beer on the wall, ' + str(num) + ' bottles of beer.\\n' + 'Take one down, pass it around, ' + str(num-1) + ' bottles of beer on the wall.\\n'\n",
+    "    elif num == 1:\n",
+    "        return str(num) + ' bottle of beer on the wall, ' + str(num) + ' bottle of beer.\\n' + 'Take one down, pass it around, ' + str(num-1) + ' bottles of beer on the wall.\\n'\n",
+    "\n",
+    "\n",
+    "numbottles = 4  \n",
+    "for i in range(1, numbottles, 1):\n",
+    "    print(words(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Question 10"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "ay = 'Hello'\n",
-    "ay."
-   ]
+   "source": []
   }
  ],
  "metadata": {
