Added updates to homework #2 file from up to 11:06 PM on Wednesday night

--- a/hw02-solution.ipynb
+++ b/hw02-solution.ipynb
@@ -144,15 +144,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['This is a file\\n', 'It has some text\\n', '\\n', 'It also has a blank line\\n']\n",
+      "['1 This is a file\\n', '2 It has some text\\n', '3 It also has a blank line\\n']\n"
+     ]
+    }
+   ],
    "source": [
     "#Question 6\n",
     "file = open(\"../file.txt\")\n",
     "lines = file.readlines()\n",
+    "print(lines)\n",
     "newf = []\n",
     "nu = 0\n",
     "for line in lines:\n",
@@ -162,19 +172,42 @@
     "    newf.append(str(nu) + \" \" + line)\n",
     "with open('../test.log', 'w') as m:\n",
     "    for u in newf:\n",
-    "        m.write(u)   \n",
-    "    "
+    "        m.write(u)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 2, 5]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Question 7"
+    "#Question 7\n",
+    "def method1(arg1):\n",
+    "    emptylist = []\n",
+    "    def length(arg):\n",
+    "        length = 0\n",
+    "        for term in arg:\n",
+    "            length = length + 1\n",
+    "        return length\n",
+    "    for uuv in arg1:\n",
+    "        xyz = length(uuv)\n",
+    "        emptylist.append(xyz)\n",
+    "    return emptylist\n",
+    "\n",
+    "print(method1(['list', 'of', 'words']))\n",
+    "\n",
+    "def method2(arg2):\n",
+    "    "
    ]
   },
   {
@@ -230,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -270,13 +303,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#Question 10"
+    "#Question 10\n",
+    "gpsfile = open('../python4geosciences/data/GPS.dat')\n",
+    "gpslines = gpsfile.readlines()"
    ]
   },
   {
