--- a/hw02-solution.ipynb
+++ b/hw02-solution.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
        "'radar'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,25 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['This is a file\\n', 'It has some text\\n', '\\n', 'It also has a blank line\\n']\n",
-      "['1 This is a file\\n', '2 It has some text\\n', '3 It also has a blank line\\n']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Question 6\n",
     "file = open(\"../file.txt\")\n",
     "lines = file.readlines()\n",
-    "print(lines)\n",
     "newf = []\n",
     "nu = 0\n",
     "for line in lines:\n",
@@ -177,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +181,7 @@
     }
    ],
    "source": [
-    "#Question 7\n",
+    "#Question 7.1\n",
     "def method1(arg1):\n",
     "    emptylist = []\n",
     "    def length(arg):\n",
@@ -202,12 +192,65 @@
     "    for uuv in arg1:\n",
     "        xyz = length(uuv)\n",
     "        emptylist.append(xyz)\n",
-    "    return emptylist\n",
+    "    return emptylist.\n",
     "\n",
-    "print(method1(['list', 'of', 'words']))\n",
-    "\n",
+    "print(method1(['list', 'of', 'words']))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 2, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question 7.2\n",
     "def method2(arg2):\n",
-    "    "
+    "    def length(arg):\n",
+    "        length = 0\n",
+    "        for term in arg:\n",
+    "            length = length + 1\n",
+    "        return length\n",
+    "    return list(map(length, arg2))\n",
+    "\n",
+    "print(method2(['list','of','words']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 2, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question 7.3\n",
+    "def method3(arg3):\n",
+    "    def length(arg):\n",
+    "        length = 0\n",
+    "        for term in arg:\n",
+    "            length = length + 1\n",
+    "        return length\n",
+    "    return [length(n) for n in arg3]\n",
+    "\n",
+    "print(method3(['list','of','words']))"
    ]
   },
   {
@@ -241,7 +284,7 @@
     "    phrase = input(\"Enter text to be encoded/decoded: \")\n",
     "    key = {'a':'n', 'b':'o', 'c':'p', 'd':'q', 'e':'r', 'f':'s', 'g':'t', 'h':'u', \n",
     "       'i':'v', 'j':'w', 'k':'x', 'l':'y', 'm':'z', 'n':'a', 'o':'b', 'p':'c', \n",
-    "       'q':'d', 'r':'e', 's':'f', 't':'g', 'u':'h', 'v':'i', 'w':'j', 'x':'k',\n",
+    "       'q':'d', 'r':'e', 's':'f', 't':'g, 'u':'h', 'v':'i', 'w':'j', 'x':'k',\n",
     "       'y':'l', 'z':'m', 'A':'N', 'B':'O', 'C':'P', 'D':'Q', 'E':'R', 'F':'S', \n",
     "       'G':'T', 'H':'U', 'I':'V', 'J':'W', 'K':'X', 'L':'Y', 'M':'Z', 'N':'A', \n",
     "       'O':'B', 'P':'C', 'Q':'D', 'R':'E', 'S':'F', 'T':'G', 'U':'H', 'V':'I', \n",
@@ -263,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -272,21 +315,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 bottle of beer on the wall, 1 bottle of beer.\n",
-      "Take one down, pass it around, 0 bottles of beer on the wall.\n",
+      "3 bottles of beer on the wall, 3 bottles of beer.\n",
+      "Take one down, pass it around, 2 bottles of beer on the wall.\n",
       "\n",
       "2 bottles of beer on the wall, 2 bottles of beer.\n",
       "Take one down, pass it around, 1 bottles of beer on the wall.\n",
       "\n",
-      "3 bottles of beer on the wall, 3 bottles of beer.\n",
-      "Take one down, pass it around, 2 bottles of beer on the wall.\n",
+      "1 bottle of beer on the wall, 1 bottle of beer.\n",
+      "Take one down, pass it around, 0 bottles of beer on the wall.\n",
       "\n"
      ]
     }
    ],
    "source": [
     "#Added colons, changed brackets to parenthesis, added another =, moved everything to one line\n",
-    "#changed numbottles to 4 so no negative bottles, rearranged order of range args,\n",
+    "#changed numbottles to 4 so no negative bottles, rearranged order of range args, reversed range order\n",
     "\n",
     "def words(num):\n",
     "    \"\"\"Returns words with proper number of beer bottles filled in.\"\"\"\n",
@@ -297,21 +340,46 @@
     "\n",
     "\n",
     "numbottles = 4  \n",
-    "for i in range(1, numbottles, 1):\n",
+    "for i in range(1, numbottles, 1)[::-1]: \n",
     "    print(words(i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5/20/2006\n",
+      "1:47:25\n"
+     ]
+    }
+   ],
    "source": [
     "#Question 10\n",
+    "class MyObjects(object):\n",
+    "    def __init__(self, date=None, time=None):\n",
+    "        self.date = date\n",
+    "        self.time = time\n",
+    "        \n",
+    "datetime = []\n",
     "gpsfile = open('../python4geosciences/data/GPS.dat')\n",
-    "gpslines = gpsfile.readlines()"
+    "gpslines = gpsfile.readlines()\n",
+    "for line in gpslines:\n",
+    "    lin = line.split()\n",
+    "    if not lin: continue\n",
+    "    if lin[0] == 'Trackpoint':\n",
+    "        date = lin[5]\n",
+    "        time = lin[6]\n",
+    "        datetime.append(MyObjects(date, time))\n",
+    "\n",
+    "print(datetime[50].date)\n",
+    "print(datetime[50].time)"
    ]
   },
   {
@@ -319,6 +387,15 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
