Fixed a quick dumb mistake

--- a/hw03-solution.ipynb
+++ b/hw03-solution.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -141,25 +141,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 0.60662973  1.116576    0.2806891 ]\n",
-      "  [-0.24378996  0.89757317 -0.30035777]\n",
-      "  [ 0.68826144 -0.32071536 -0.14464123]]]\n"
+      "[[[-1.06342003 -0.44985694  1.23301306]\n",
+      "  [ 0.48350252  0.20618361  0.28322998]\n",
+      "  [-0.0672844   0.62533628 -1.59046643]]\n",
+      "\n",
+      " [[-0.79848312  0.97527432  1.27804104]\n",
+      "  [ 1.0671806   0.64676117 -0.52800676]\n",
+      "  [ 0.40854759  0.25624922  1.41524942]]\n",
+      "\n",
+      " [[-0.47317194 -0.50437059 -1.47222759]\n",
+      "  [ 1.02926876  1.31233361 -0.87484109]\n",
+      "  [-0.91785056 -1.68713089 -0.03462175]]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([ 1.116576  ,  0.89757317, -0.32071536])"
+       "array([-0.44985694,  0.20618361,  0.62533628])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Question 5\n",
-    "a = np.random.normal(loc = 0, scale = 1, size = (1,3,3))\n",
+    "a = np.random.normal(loc = 0, scale = 1, size = (3,3,3))\n",
     "print(a)\n",
     "a[0,:,1]"
    ]
